# MangoCode

./: .gitignore  LICENSE  LICENSE.md  README.md
docs/: README.md  architecture.md  chrome-remote-debug.md  configuration.md  getting-started.md  mango-intelligence.md  mangocode-gap-analysis.md  memory-skills-plugins.md  providers-and-models.md  slash-commands.md  tools.md
docs/crates/: README.md  acp.md  api.md  bridge.md  cli.md  commands.md  core.md  mcp.md  plugins.md  query.md  support-crates.md  tools.md  tui.md
examples/skills/: README.md
examples/skills/design-foundations/: SKILL.md
examples/skills/git-conventions/: SKILL.md
examples/skills/rust-review/: SKILL.md  performance.md  security.md
examples/skills/rust-review/scripts/: check.sh
spec/: 00_overview.md  01_core_entry_query.md  02_commands.md  03_tools.md  04_components_core_messages.md  05_components_agents_permissions_design.md  06_services_context_state.md  07_hooks.md  08_ink_terminal.md  09_bridge_cli_remote.md  10_utils.md  11_special_systems.md  12_constants_types.md  13_rust_codebase.md  INDEX.md
src-rust/: Cargo.toml  LICENSE  create_styled_presentation.py
src-rust/crates/acp/: Cargo.toml
src-rust/crates/acp/src/: lib.rs
src-rust/crates/api/: Cargo.toml
src-rust/crates/api/src/: cch.rs  codex_adapter.rs  error_handling.rs  lib.rs  model_registry.rs  provider.rs  provider_error.rs  provider_types.rs  registry.rs  retry.rs  stream_parser.rs  transform.rs
src-rust/crates/api/src/providers/: anthropic.rs  anthropic_oauth.rs  azure.rs  bedrock.rs  cohere.rs  copilot.rs  copilot_pirate_tools.rs  google.rs  message_normalization.rs  minimax.rs  mock.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs  openai_compat_providers.rs  request_options.rs  vertex_openai.rs
src-rust/crates/api/src/transformers/: anthropic.rs  openai_chat.rs
src-rust/crates/api/tests/: copilot_proxy_sim.rs  provider_tests.rs
src-rust/crates/bridge/: Cargo.toml
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/buddy/: Cargo.toml
src-rust/crates/buddy/src/: lib.rs
src-rust/crates/cli/: Cargo.toml  build.rs
src-rust/crates/cli/src/: codex_oauth_flow.rs  main.rs  oauth_flow.rs  system_prompt.txt
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: chrome_cdp.rs  lib.rs  named_commands.rs
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/src/: analytics.rs  attachments.rs  auth_store.rs  auto_mode.rs  bash_classifier.rs  chrome_js.rs  claudemd.rs  cloud_session.rs  codex_oauth.rs  command_line.rs  context_collapse.rs  coordination.rs  crypto_utils.rs  device_code.rs  effort.rs  feature_flags.rs  feature_gates.rs  file_history.rs  format_utils.rs  frontmatter.rs  git_diff.rs  git_utils.rs  goals.rs  harness.rs  ide.rs  keybindings.rs  layered_memory.rs  lib.rs  lsp.rs  memdir.rs  message_utils.rs  migrations.rs  oauth_config.rs  output_styles.rs  permission_critic.rs  prompt_history.rs  provider_id.rs  ps_classifier.rs  remote_session.rs  remote_settings.rs  (+18 more)
src-rust/crates/core/tests/: parity_smoke.rs  test_mcp_templates.rs
src-rust/crates/file-search/: Cargo.toml
src-rust/crates/file-search/src/: lib.rs
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/mcp/src/: connection_manager.rs  lib.rs  oauth.rs  registry.rs
src-rust/crates/plugins/: Cargo.toml
src-rust/crates/plugins/src/: hooks.rs  lib.rs  loader.rs  manifest.rs  marketplace.rs  plugin.rs  registry.rs
src-rust/crates/query/: Cargo.toml
src-rust/crates/query/src/: agent_tool.rs  auto_dream.rs  away_summary.rs  clippy_baseline.rs  clippy_diff.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  copilot_server.rs  cron_scheduler.rs  execution_scratchpad.rs  lib.rs  memory_loader.rs  ollama.rs  plan_search.rs  plan_search_rollout.rs  proactive.rs  session_memory.rs  skill_prefetch.rs  work_run.rs
src-rust/crates/query/tests/: integration.rs
src-rust/crates/sleep-inhibitor/: Cargo.toml
src-rust/crates/sleep-inhibitor/src/: lib.rs  linux_inhibitor.rs  macos.rs  windows_inhibitor.rs
src-rust/crates/tool-runtime/: Cargo.toml
src-rust/crates/tool-runtime/src/: fuzzy.rs  lib.rs
src-rust/crates/tools/: Cargo.toml
src-rust/crates/tools/src/: agent_tool.rs  ansi.rs  apply_patch.rs  ask_user.rs  bash.rs  batch_edit.rs  bot_wall_sniff.rs  brief.rs  browser_tool.rs  bundled_skills.rs  circuit_breaker.rs  code_search_tool.rs  computer_use.rs  config_tool.rs  coordination.rs  cron.rs  edit_hints.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  formatter.rs  fs_atomic.rs  glob_tool.rs  goal_tool.rs  grep_tool.rs  humanize.rs  lib.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_resources.rs  notebook_edit.rs  output_reducers.rs  powershell.rs  pr_watch.rs  project_graph.rs  pty_bash.rs  redact.rs  remote_trigger.rs  (+14 more)
src-rust/crates/tools/src/browser_antibot/: chrome_args.rs  expert_script.rs  localhost_devtools.rs  match_template.rs  mod.rs  png_template.rs  socks_stub.rs
src-rust/crates/tui/: Cargo.toml
src-rust/crates/tui/src/: agents_view.rs  app.rs  bridge_state.rs  bypass_permissions_dialog.rs  casefold.rs  context_viz.rs  desktop_upsell_startup.rs  device_auth_dialog.rs  dialog_select.rs  dialogs.rs  diff_viewer.rs  elicitation_dialog.rs  export_dialog.rs  feedback_survey.rs  figures.rs  hooks_config_menu.rs  hybrid.rs  image_paste.rs  input.rs  invalid_config_dialog.rs  key_input_dialog.rs  kitty_image.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  message_copy.rs  model_picker.rs  notifications.rs  onboarding_dialog.rs  overlays.rs  plugin_views.rs  privacy_screen.rs  prompt_input.rs  render.rs  rustle.rs  session_branching.rs  session_browser.rs  settings_screen.rs  slash_commands.rs  (+7 more)
src-rust/crates/tui/src/messages/: markdown.rs  markdown_enhanced.rs  mod.rs
src-rust/crates/tui/tests/: diff_viewer.rs  markdown_enhancements.rs  render_snapshots.rs
src-rust/crates/turn-diff/: Cargo.toml
src-rust/crates/turn-diff/src/: lib.rs
src-rust/pacman_game/: main.py
