[package]
name = "mangocode-acp"
version.workspace = true
edition.workspace = true
description = "Agent Client Protocol (ACP) server for MangoCode — JSON-RPC 2.0 over stdio"

[dependencies]
mangocode-core = { workspace = true }
mangocode-api = { workspace = true }
mangocode-query = { workspace = true }
mangocode-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
