[package]
name = "mangocode-query"
version.workspace = true
edition.workspace = true

[features]
default = ["proactive"]
proactive = ["mangocode-core/proactive"]

[dependencies]
mangocode-core = { workspace = true }
mangocode-api = { workspace = true }
mangocode-plugins = { workspace = true }
mangocode-tools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
notify = "6"

[dev-dependencies]
tempfile = { workspace = true }
